--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
 <body>
   <header></header>
   <main>
-    <h1>Home</h1>
+    <h1>Pagina principal</h1>
+    <div class="d-flex flex-column flex-lg-row align-items-center container ">
+      <div id="filtersProducts" class="d-flex flex-lg-column justify-content-evenly">
+        <button id="todos" class="btn btn-success btnCategory">Todos</button>
+        <button id="remeras" class="btn btn-success btnCategory">Remeras</button>
+        <button id="sweater" class="btn btn-success btnCategory">Sweater</button>
+        <button id="calzados" class="btn btn-success btnCategory">Calzado</button>
+
+      </div>
+      <section id="cardsProducts" class="d-flex row w-100 justify-content-center">
+  
+      </section>
+
+    </div>
 
   </main>
 
