--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header></header>
   <main>
-    <h1>Pagina principal</h1>
+    <!-- <h1>Pagina principal</h1> -->
     <div class="d-flex flex-column flex-lg-row align-items-center container ">
       <div id="filtersProducts" class="d-flex flex-lg-column justify-content-evenly">
         <button id="Todos" class="btn btn-success btnCategory">Todos</button>
@@ -19,8 +19,9 @@
         <button id="Calzado" class="btn btn-success btnCategory">Calzado</button>
 
       </div>
+      <!-- Aqui se cargan cards desde JS -->
+      <h2 id="title" class="mt-3">Todos los productos</h2>
       <section id="cardsProducts" class="d-flex row w-100 justify-content-center">
-  
       </section>
 
     </div>
