--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
   <title>Dawson</title>
   <link rel="stylesheet" href="./styles/index.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!-- Option 1: Include in HTML -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">  
 </head>
 <body>
   <header></header>
   <main>
+    <div class="d-flex justify-content-end me-5">
+      <button id="Carrito" class="btn btn-success"><i class="bi bi-cart-fill"></i> </button>
+    </div>
     <!-- <h1>Pagina principal</h1> -->
     <div class="d-flex flex-column flex-lg-row align-items-center container ">
       <div id="filtersProducts" class="d-flex flex-lg-column justify-content-evenly">
@@ -17,12 +22,14 @@
         <button id="Remeras" class="btn btn-success btnCategory">Remeras</button>
         <button id="Sweater" class="btn btn-success btnCategory">Sweater</button>
         <button id="Calzado" class="btn btn-success btnCategory">Calzado</button>
-
+        
       </div>
       <!-- Aqui se cargan cards desde JS -->
-      <h2 id="title" class="mt-3">Todos los productos</h2>
-      <section id="cardsProducts" class="d-flex row w-100 justify-content-center">
-      </section>
+      <div>
+        <h2 id="title" class="mt-3">Todos los productos</h2>
+        <section id="cardsProducts" class="d-flex row w-100 justify-content-center">
+        </section>
+      </div>
 
     </div>
 
