modif pagina principal

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header></header>
   <main>
     <div class="d-flex justify-content-end me-5">
-      <button id="Carrito" class="btn btn-success"><i class="bi bi-cart-fill"></i> </button>
+      <a href="./views/carrito.html" id="Carrito" class="btn btn-success"><i class="bi bi-cart-fill"></i> <span class="numeritoCarrito">0</span> </a>
     </div>
     <!-- <h1>Pagina principal</h1> -->
     <div class="d-flex flex-column flex-lg-row align-items-center container ">
