--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <button id="Sweater" class="btn btn-success me-3 mt-lg-3 btnCategorie">Sweater</button>
         <button id="Calzado" class="btn btn-success me-3 mt-lg-3 btnCategorie">Calzado</button>
       </div>
-      <!-- Aqui se cargan cards desde JS -->
       <div>
-        <h2 id="title" class="mt-3">Todos los productos</h2>
+        <h2 id="title" class="mt-3 text-center">Todos los productos</h2>
         <section id="cardsProducts" class="d-flex row w-100 justify-content-center">
+        <!-- Aqui se cargan cards desde JS -->
         </section>
       </div>
     </div>
