--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dawson</title>
+  <link rel="icon" href="./Resources/logoMinuatura.jpg">
   <link rel="stylesheet" href="./styles/index.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <!-- Option 1: Include in HTML -->
@@ -11,7 +12,7 @@
 </head>
 <body>
   <header></header>
-  <main>
+  <main class="mainIndex">
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
@@ -30,15 +31,15 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <div class="d-flex justify-content-end me-5">
-      <a href="./views/carrito.html" id="Carrito" class="btn btn-danger m-3"><i class="bi bi-cart-fill"></i> <span class="numeritoCarrito">0</span> </a>
+    <div class="d-flex justify-content-end me-5 divCarrito">
+      <a href="./views/carrito.html" id="Carrito" class="btn btn-danger m-3 btnCarrito">Carrito<i class="bi bi-cart-fill"></i> <span class="numeritoCarrito">0</span> </a>
     </div>
     <div class="d-flex flex-column flex-lg-row align-items-center container ">
       <div id="filtersProducts" class="d-flex flex-lg-column justify-content-evenly">
-        <button id="Todos" class="btn btn-success me-3 mt-lg-3 active btnCategorie">Todos</button>
-        <button id="Remeras" class="btn btn-success me-3 mt-lg-3 btnCategorie">Remeras</button>
-        <button id="Sweater" class="btn btn-success me-3 mt-lg-3 btnCategorie">Sweater</button>
-        <button id="Calzado" class="btn btn-success me-3 mt-lg-3 btnCategorie">Calzado</button>
+        <button id="Todos" class="btn btn-success me-3 mt-lg-3 activeFilter btnCategorie">Todos</button>
+        <button id="Remeras" class="btn btn-success me-3 mt-lg-3 activeFilter btnCategorie">Remeras</button>
+        <button id="Sweater" class="btn btn-success me-3 mt-lg-3 activeFilter btnCategorie">Sweater</button>
+        <button id="Calzado" class="btn btn-success me-3 mt-lg-3 activeFilter btnCategorie">Calzado</button>
       </div>
       <div>
         <h2 id="title" class="mt-3 text-center">Todos los productos</h2>
