--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </button>
     </div>
     <div class="d-flex justify-content-end me-5 divCarrito">
-      <a href="./views/carrito.html" id="Carrito" class="btn btn-danger m-3 btnCarrito">Carrito<i class="bi bi-cart-fill"></i> <span class="numeritoCarrito">0</span> </a>
+      <a href="./views/carrito.html" id="Carrito" class="btn btn-danger m-3 btnCarrito"><i class="bi bi-cart-fill"></i> <span class="numeritoCarrito">0</span> </a>
     </div>
     <div class="d-flex flex-column flex-lg-row align-items-center container ">
       <div id="filtersProducts" class="d-flex flex-lg-column justify-content-evenly">
@@ -54,5 +54,6 @@
   <footer></footer>
   <script type="module" src="./JS/app.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
